--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,26 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header{
+  width: 100%;
+  display: flex;
+  color: green;
+  text-align: center;
+  background-color: aqua;
+  margin: 0%;
+}
+#transaction{
+  border: 2px solid white;
+  background-color: blue;
+  color: violet;
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 1rem;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -37,6 +33,4 @@
   padding: 2em;
 }
 
-.read-the-docs {
-  color: #888;
-}
+
